--- a/index.html
+++ b/index.html
@@ -1,59 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulario de Cliente</title>
-    <link rel="stylesheet" href="estilos.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Formulario de Cliente</title>
+  <link rel="stylesheet" href="estilos.css"/>
 </head>
 <body>
-    <div class="form-container">
-        <h2>Datos del Cliente</h2>
+  <div class="form-container">
+    <h2>Datos del Cliente</h2>
 
-    <form action="#" method="post">
+    <form id="formulario" action="#" method="post" novalidate>
       <label for="nombre">Nombre:</label>
-      <input type="text" id="nombre" name="nombre" required>
+      <input type="text" id="nombre" name="nombre" />
+      <span class="error" id="error-nombre"></span>
 
       <label for="correo">Correo electrónico:</label>
-      <input type="email" id="correo" name="correo" required>
+      <input type="text" id="correo" name="correo" />
+      <span class="error" id="error-correo"></span>
 
       <label for="telefono">Teléfono:</label>
-      <input type="tel" id="telefono" name="telefono" required>
+      <input type="text" id="telefono" name="telefono" />
+      <span class="error" id="error-telefono"></span>
 
       <label for="fecha_nacimiento">Fecha de nacimiento:</label>
-      <input type="date" id="fecha_nacimiento" name="fecha_nacimiento" required>
+      <input type="date" id="fecha_nacimiento" name="fecha_nacimiento" />
+      <span class="error" id="error-fecha"></span>
 
       <label>Sexo:</label>
       <div class="gender-options">
-        <label><input type="radio" name="genero" value="masculino" required> Masculino</label>
-        <label><input type="radio" name="genero" value="femenino"> Femenino</label>
+        <label><input type="radio" name="genero" value="masculino" /> Masculino</label>
+        <label><input type="radio" name="genero" value="femenino" /> Femenino</label>
       </div>
+      <span class="error" id="error-genero"></span>
 
       <label for="estado">Estado civil:</label>
-      <select id="estado" name="estado" required>
+      <select id="estado" name="estado">
         <option value=""></option>
         <option value="soltero">Soltero(a)</option>
         <option value="casado">Casado(a)</option>
         <option value="divorciado">Divorciado(a)</option>
         <option value="viudo">Viudo(a)</option>
       </select>
+      <span class="error" id="error-estado"></span>
 
       <label for="nacionalidad">Nacionalidad:</label>
-      <select id="nacionalidad" name="nacionalidad" required>
+      <select id="nacionalidad" name="nacionalidad">
         <option value=""></option>
         <option value="ecuatoriana">Ecuatoriana</option>
         <option value="colombiana">Colombiana</option>
         <option value="peruana">Peruana</option>
         <option value="otra">Otra</option>
       </select>
+      <span class="error" id="error-nacionalidad"></span>
 
       <label for="direccion">Dirección:</label>
-      <textarea id="direccion" name="direccion" rows="3" required></textarea>
+      <textarea id="direccion" name="direccion" rows="3"></textarea>
+      <span class="error" id="error-direccion"></span>
 
       <button type="submit">Enviar</button>
     </form>
   </div>
-    
+
+  <script src="validaciones.js"></script>
 </body>
 </html>
-
